--- a/src/app/pais/pages/por-pais/por-pais.component.html
+++ b/src/app/pais/pages/por-pais/por-pais.component.html
@@ -15,11 +15,12 @@
 
 <hr />
 
-<div class="alert alert-danger">
-    No se encontró nada con el término ABCD
+<div *ngIf="hayError"
+     class="alert alert-danger">
+    No se encontró nada con el término "{{ termino }}"  
 </div>
 
-<div class="row">
+<div *ngIf="paises.length > 0" class="row">
     <div class="col">
         
         <table class="table table-hover">
@@ -33,13 +34,19 @@
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>1</td>
-                    <td>Bandera</td>
-                    <td>Nombre</td>
-                    <td>123456</td>
+                <tr *ngFor="let pais of paises; let i = index">
+                    <td> {{ i + 1 }} </td>
                     <td>
-                        <a href="/pai/col">Ver...</a>
+                        <img [src]="pais.flags.png" class="small-flag"/>
+                    </td>
+                    <td>
+                        {{ pais.name.common }}
+                    </td>
+                    <td>
+                        {{ pais.population | number }}
+                    </td>
+                    <td>
+                        <a [routerLink]="['/pais', pais.cca2 ]" >Ver...</a>
                     </td>
                 </tr>
             </tbody>
